--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
   </script>
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>Jay-Jay</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
+            <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#services" data-after="Service">Skills</a></li>
             <li><a href="#projects" data-after="Projects">Projects</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Badidzi Mathetsa <span></span></h1>
+        <h1> Badidzi Mathetsa <span></span></h1>
       </div>
     </div>
   </section>
@@ -156,18 +156,18 @@
           </div>
           <div class="project-img">
             <img
-              src="../personal/img/HelloTech-qr-code.jpeg"
+              src="/img/HelloTech-qr-code.jpeg"
               alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
             <h1>Project 2</h1>
-            <h2>E-Sign</h2>
+            <a class="link" href="https://e-signdigitalacademy.herokuapp.com/">E-Sign</a>
             <p>A video call app where there are interpreters that will be able to help hearing impared people to easily communicate with non hearing impared people </p>
           </div>
           <div class="project-img">
-            <img src="../../porfolio 2/personal/img/e-sign_home.png" alt="img">
+            <img src="/img/e-sign_home.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -177,7 +177,7 @@
             <p>This app help people find and write recipes online</p>
           </div>
           <div class="project-img">
-            <img src="../personal/img/Screenshot 2022-05-13 at 08.25.34.png" alt="img">
+            <img src="/img/Screenshot 2022-05-13 at 08.25.34.png" alt="img">
           </div>
         </div>
       </div>
